Update title in analysis notebook
Removed 'Step-by-Step Guide' from the title.

--- a/Loan-Default-Prediction/analysis.ipynb
+++ b/Loan-Default-Prediction/analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "32c2026c",
    "metadata": {},
    "source": [
-    "# Loan Default Prediction: Step-by-Step Guide\n",
+    "# Loan Default Prediction\n",
     "\n",
     "This notebook will walk you through:\n",
     "- Loading and cleaning data\n",
