--- a/Loan-Default-Prediction/analysis.ipynb
+++ b/Loan-Default-Prediction/analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8c4ecb93",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "4             1.0         Urban           Y  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,14 +174,13 @@
    "source": [
     "# Loading train and test data\n",
     "import pandas as pd\n",
-    "train_df = pd.read_csv('train_data.csv')\n",
-    "test_df = pd.read_csv('test_data.csv')\n",
+    "train_df = pd.read_csv('dataset.csv')\n",
     "train_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "fd184006",
    "metadata": {},
    "outputs": [
@@ -204,7 +203,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,13 +211,12 @@
    "source": [
     "# Cleaning missing values\n",
     "train_df = train_df.fillna(train_df.mode().iloc[0])\n",
-    "test_df = test_df.fillna(test_df.mode().iloc[0])\n",
     "train_df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "7af429a8",
    "metadata": {},
    "outputs": [
@@ -431,7 +429,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,13 +438,12 @@
     "# Encoding categorical variables\n",
     "categorical_cols = ['Gender', 'Married', 'Dependents', 'Education', 'Self_Employed', 'Property_Area']\n",
     "train_df_encoded = pd.get_dummies(train_df, columns=categorical_cols)\n",
-    "test_df_encoded = pd.get_dummies(test_df, columns=categorical_cols)\n",
     "train_df_encoded.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "1f2e7b53",
    "metadata": {},
    "outputs": [
@@ -456,7 +453,7 @@
        "((491, 20), (123, 20))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "157abe65",
    "metadata": {},
    "outputs": [
@@ -517,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "01a37d4f",
    "metadata": {},
    "outputs": [
