--- a/Sales-Data-Analysis/analysis.ipynb
+++ b/Sales-Data-Analysis/analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "e9d08efe",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Loading the CSV file with proper encoding to avoid UnicodeDecodeError\n",
-    "df = pd.read_csv('dataset - Superstore.csv', encoding='latin1')\n",
+    "df = pd.read_csv('dataset.csv', encoding='latin1')\n",
     "df.head()"
    ]
   },
